# quant-research-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
docs/: project-status.md  research-notes.md
scripts/: check_daily_outputs.sh  check_factor_registry.py  daily_research.sh  generate_summary.sh  run_2025_horizon_matrix.py  status_snapshot.sh
src/aqt/: __init__.py  backtest.py  cli.py  config.py  data.py  features.py  labels.py  models.py  pipeline.py  research.py  universe.py  update.py
